--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>City Bank </title>
   </head>
   <body>
-    <div id="root" class="mx-auto max-w-[982px]"></div>
+    <div id="root" class="bg-[#F5F6F8] h-[1000px]pt-2 pb-7 font-custom"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
